# pixel-roguelike

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
apps/level_editor/: CMakeLists.txt  main.cpp
apps/model_viewer/: CMakeLists.txt  main.cpp
apps/runtime/: CMakeLists.txt  main.cpp
src/editor/: CMakeLists.txt  EditorAssetBrowser.cpp  EditorAssetPreviewRenderer.cpp  EditorCommand.cpp  EditorCommand.h  EditorLayoutPreset.cpp  EditorLayoutPreset.h  EditorPreviewWorld.cpp  EditorPreviewWorld.h  EditorSceneDocument.cpp  EditorSceneDocument.h  EditorSceneSerializer.cpp  EditorSelectionSystem.cpp  EditorSelectionSystem.h  EditorViewportController.cpp  EditorViewportController.h  LevelEditorUi.h
src/editor/assets/: EditorAssetBrowser.cpp  EditorAssetBrowser.h
src/editor/core/: EditorCommand.cpp  EditorCommand.h  EditorLayoutPreset.cpp  EditorLayoutPreset.h  EditorRuntimePreviewSession.cpp  EditorRuntimePreviewSession.h  LevelEditorCore.cpp  LevelEditorCore.h
src/editor/render/: EditorAssetPreviewRenderer.cpp  EditorAssetPreviewRenderer.h  EditorScenePreviewRenderer.cpp  EditorScenePreviewRenderer.h
src/editor/scene/: EditorPreviewWorld.cpp  EditorPreviewWorld.h  EditorSceneDocument.cpp  EditorSceneSerializer.cpp  EditorSceneSerializer.h  EditorSelectionSystem.cpp  EditorSelectionSystem.h
src/editor/ui/: EditorAssetBrowserPanel.cpp  EditorEnvironmentPanel.cpp  EditorInspectorPanel.cpp  EditorOutlinerPanel.cpp  EditorOutlinerPanel.h  EditorPanelUtils.cpp  EditorPanels.h  LevelEditorUi.h
src/editor/viewport/: EditorViewportController.cpp  EditorViewportController.h  EditorViewportInteraction.cpp  EditorViewportInteraction.h
src/engine/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.h  Screenshot.cpp  Window.cpp  Window.h
src/engine/core/: Application.cpp  Application.h  EventBus.h  PathUtils.cpp  PathUtils.h  System.h  Time.cpp  Time.h  Window.cpp  Window.h
src/engine/ecs/: Registry.h
src/engine/input/: InputSystem.cpp  InputSystem.h
src/engine/physics/: PhysicsSystem.cpp  PhysicsSystem.h
src/engine/rendering/: DitherPass.h  GltfLoader.cpp  GltfLoader.h  Mesh.cpp  Mesh.h  MeshGeometry.h  MeshLibrary.cpp  MeshLibrary.h  Renderer.cpp  Renderer.h  Shader.cpp
src/engine/rendering/assets/: AssimpLoader.cpp  AssimpLoader.h  GltfLoader.cpp  GltfLoader.h  ModelLoader.cpp  ModelLoader.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h
src/engine/rendering/core/: Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h
src/engine/rendering/geometry/: Mesh.cpp  Mesh.h  MeshGeometry.h  MeshLibrary.cpp  MeshLibrary.h  Renderer.cpp  Renderer.h
src/engine/rendering/lighting/: RenderLight.h  ShadowMap.cpp  ShadowMap.h
src/engine/scene/: Scene.h  SceneManager.cpp  SceneManager.h
src/engine/ui/: ImGuiLayer.cpp  ImGuiLayer.h  Screenshot.cpp  Screenshot.h
src/game/: CMakeLists.txt  CathedralScene.cpp  CathedralScene.h
src/game/components/: CameraComponent.h  CharacterControllerComponent.h  CheckpointComponent.h  ControllableTag.h  DoorComponent.h  DoorLeafComponent.h  InteractableComponent.h  LightComponent.h  MeshComponent.h  PlayerInteractionLockComponent.h  PlayerMovementComponent.h  PlayerSpawnComponent.h  PrimaryCameraTag.h  StaticColliderComponent.h  TransformComponent.h  ViewmodelComponent.h
src/game/content/: ContentRegistry.cpp  ContentRegistry.h
src/game/level/: LevelBuildContext.h  LevelBuilder.cpp  LevelBuilder.h  LevelDef.cpp  LevelDef.h  LevelLoader.cpp  LevelLoader.h
src/game/prefabs/: GameplayPrefabAssets.cpp  GameplayPrefabAssets.h  GameplayPrefabData.h  GameplayPrefabs.cpp  GameplayPrefabs.h
src/game/rendering/: EnvironmentDebugSync.cpp  EnvironmentDebugSync.h  EnvironmentDefinition.cpp  EnvironmentDefinition.h  EnvironmentProfile.cpp  EnvironmentProfile.h  MaterialDefinition.cpp  MaterialDefinition.h  MaterialKind.h  MaterialTextureLibrary.cpp  MaterialTextureLibrary.h  MeshAssetProvider.h  RetroPalette.h  RuntimeCameraMath.cpp  RuntimeCameraMath.h  RuntimeSceneRenderer.cpp  RuntimeSceneRenderer.h
src/game/runtime/: RuntimeGameSession.cpp  RuntimeGameSession.h  RuntimeGameplay.cpp  RuntimeGameplay.h  RuntimeInputState.cpp  RuntimeInputState.h
src/game/scenes/: CathedralScene.cpp  CathedralScene.h  GenericFileScene.cpp  GenericFileScene.h  SilosCloisterScene.cpp  SilosCloisterScene.h
src/game/session/: EquipmentState.cpp  EquipmentState.h  RunSession.h
src/game/systems/: CameraSystem.cpp  CameraSystem.h  CheckpointSystem.cpp  CheckpointSystem.h  DoorSystem.cpp  DoorSystem.h  InteractionSystem.cpp  InteractionSystem.h  InventorySystem.cpp  InventorySystem.h  PlayerMovementSystem.cpp  PlayerMovementSystem.h  RenderSystem.cpp  RenderSystem.h
src/game/ui/: InteractionFocusState.h  InteractionPromptState.h  InventoryMenuState.h
tests/: CMakeLists.txt  profile_play_preview.cpp  test_cathedral_prefabs.cpp  test_cathedral_scene_data.cpp  test_content_registry.cpp  test_editor_asset_browser.cpp  test_editor_command_stack.cpp  test_editor_hierarchy.cpp  test_editor_layout_presets.cpp  test_editor_selection.cpp  test_environment_profiles.cpp  test_equipment_state.cpp  test_gameplay_prefab_assets.cpp  test_level_def.cpp  test_level_lighting.cpp  test_level_roundtrip.cpp  test_material_definitions.cpp  test_mesh_geometry.cpp  test_runtime_game_session.cpp  test_silos_cloister_level.cpp
tests/cmake/: TestSupport.cmake
tests/common/: TestSupport.h
tests/data/: light_records.scene
tests/data/models/: pillar_import_test.fbx
tests/editor/: CMakeLists.txt  test_editor_asset_browser.cpp  test_editor_command_stack.cpp  test_editor_hierarchy.cpp  test_editor_layout_presets.cpp  test_editor_runtime_preview.cpp
tests/engine/: CMakeLists.txt  test_mesh_geometry.cpp  test_model_discovery.cpp  test_model_loader.cpp
tests/game/: CMakeLists.txt  test_cathedral_prefabs.cpp  test_content_registry.cpp  test_environment_debug_sync.cpp  test_environment_profiles.cpp  test_equipment_state.cpp  test_level_roundtrip.cpp  test_material_definitions.cpp  test_silos_cloister_level.cpp
(+132 files in other folders)
